--- a/OICAR-MobileApp/app.json
+++ b/OICAR-MobileApp/app.json
@@ -1,17 +1,19 @@
 {
   "expo": {
-    "name": "OICAR-MobileApp",
-    "slug": "OICAR-MobileApp",
+    "name": "oicar-mobileapp",
+    "slug": "oicar-mobileapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -20,13 +22,13 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "statusBar": {
+        "barStyle": "light-content",
+        "backgroundColor": "#343a40"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      "expo-router"
-    ]
+    }
   }
 }
