--- a/OICAR-MobileApp/package.json
+++ b/OICAR-MobileApp/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "expo": "~53.0.9",
     "expo-image": "~2.1.7",
+    "expo-linear-gradient": "^14.1.4",
     "expo-router": "~5.0.7",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-reanimated": "~3.17.4",
-    "react-dom": "19.0.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
