fix: optimize Android emulator performance and resolve dark screen issues - Replace inefficient category lookup with memoized Map for O(1) lookups - Add React.useCallback/useMemo to prevent unnecessary re-renders - Remove excessive console.log spam from category resolution - Change StatusBar to dark content for better contrast - Fix Android statusBar config and theme compatibility - Resolve multiple Expo process conflicts causing dark screens - Reduce bundle time from 4.3s with performance optimizations

--- a/OICAR-MobileApp/app.json
+++ b/OICAR-MobileApp/app.json
@@ -23,8 +23,8 @@
         "backgroundColor": "#ffffff"
       },
       "statusBar": {
-        "barStyle": "light-content",
-        "backgroundColor": "#343a40"
+        "barStyle": "dark-content",
+        "backgroundColor": "#f8f9fa"
       }
     },
     "web": {
