refactor: centralize authentication with ApiService
Implement a comprehensive ApiService to manage authentication tokens
and API requests centrally. Replace direct token passing with token
management through the ApiService singleton.

Key improvements:
- Add internet permissions in app.json
- Create robust error handling and connectivity testing
- Implement token validation and user identity verification
- Remove token dependencies from service methods
- Add checkout functionality through ApiService

This change improves security, simplifies authentication management,
and reduces code duplication across the application.

--- a/OICAR-MobileApp/app.json
+++ b/OICAR-MobileApp/app.json
@@ -25,7 +25,11 @@
       "statusBar": {
         "barStyle": "dark-content",
         "backgroundColor": "#f8f9fa"
-      }
+      },
+      "permissions": [
+        "INTERNET",
+        "ACCESS_NETWORK_STATE"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
