--- a/OICAR-MobileApp/package.json
+++ b/OICAR-MobileApp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~53.0.9",
     "expo-image": "~2.1.7",
+    "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.4",
     "expo-router": "~5.0.7",
     "expo-status-bar": "~2.2.3",
