Configure Vercel for GitHub monorepo integration and automatic deployments

--- a/OICAR-MobileApp/vercel.json
+++ b/OICAR-MobileApp/vercel.json
@@ -2,10 +2,19 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": null,
+  "installCommand": "npm install",
+  "devCommand": "npm run web",
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "git": {
+    "deploymentEnabled": {
+      "main": true
+    }
+  },
+  "ignoreCommand": "git diff --quiet HEAD^ HEAD .",
+  "functions": {}
 } 
