--- a/OICAR-MobileApp/vercel.json
+++ b/OICAR-MobileApp/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm install && npm run build",
   "outputDirectory": "dist",
   "framework": null,
   "installCommand": "npm install",
@@ -9,12 +9,5 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ],
-  "git": {
-    "deploymentEnabled": {
-      "main": true
-    }
-  },
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD .",
-  "functions": {}
+  ]
 } 
