--- a/OICAR-MobileApp/package.json
+++ b/OICAR-MobileApp/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "expo export --platform web"
+    "build": "expo export --platform web",
+    "build:web": "expo export --platform web --output-dir dist"
   },
   "dependencies": {
     "expo": "~53.0.9",
