Add unit tests for API with 8 working tests - XUnit project with AuthController and utility tests, updated Azure pipeline to run tests automatically

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,8 +49,16 @@ stages:
       displayName: 'Run tests'
       inputs:
         command: 'test'
-        projects: '$(projectPath)/*.csproj'
-        arguments: '--configuration $(buildConfiguration) --no-build --verbosity normal'
+        projects: 'SnjofkaloAPI.Tests/*.csproj'
+        arguments: '--configuration $(buildConfiguration) --verbosity normal --logger trx --results-directory $(Build.ArtifactStagingDirectory)/TestResults'
+      
+    - task: PublishTestResults@2
+      displayName: 'Publish test results'
+      inputs:
+        testResultsFormat: 'VSTest'
+        testResultsFiles: '$(Build.ArtifactStagingDirectory)/TestResults/*.trx'
+        failTaskOnFailedTests: true
+      condition: always()
 
     - task: DotNetCoreCLI@2
       displayName: 'Publish application'
