--- a/OICAR-MobileApp/package.json
+++ b/OICAR-MobileApp/package.json
@@ -9,9 +9,13 @@
     "web": "expo start --web",
     "build": "expo export --platform web",
     "build:web": "expo export --platform web --output-dir dist",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test": "jest --watchAll"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+    ]
   },
   "dependencies": {
     "expo": "~53.0.9",
@@ -34,8 +38,9 @@
     "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^30.0.0",
+    "jest": "~29.7.0",
     "jest-environment-jsdom": "^30.0.0",
+    "jest-expo": "~53.0.7",
     "react-test-renderer": "^19.0.0",
     "typescript": "~5.8.3"
   },
